// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Should render correctly 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#3D93F8",
        "borderColor": "transparent",
        "borderStyle": "solid",
        "borderWidth": 1,
        "height": 75,
        "paddingTop": 20,
        "width": "auto",
      },
    ]
  }
>
  <Text
    disabled={false}
    style={
      Array [
        Object {
          "color": "#FFFFFF",
          "fontFamily": "Inter-Medium",
          "fontSize": 17,
        },
      ]
    }
    type="bottom"
  >
    Title Button
  </Text>
</View>
`;

exports[`Button Should render with custom props 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": true,
    }
  }
  accessible={true}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderColor": "transparent",
        "borderRadius": 10,
        "borderStyle": "solid",
        "borderWidth": 1,
        "height": 50,
        "paddingTop": 20,
        "width": "auto",
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "width": "100%",
        },
      ]
    }
  >
    <ActivityIndicator
      color="#FFFFFF"
      size="small"
    />
  </View>
</View>
`;

exports[`SocialButton Should render correctly 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#3D93F8",
        "borderColor": "transparent",
        "borderStyle": "solid",
        "borderWidth": 1,
        "height": 75,
        "justifyContent": "center",
        "width": "auto",
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        },
      ]
    }
  >
    <Text
      disabled={false}
      style={
        Array [
          Object {
            "color": "#FFFFFF",
            "fontFamily": "Inter-Medium",
            "fontSize": 17,
          },
        ]
      }
      type="bottom"
    >
      Title Button
    </Text>
  </View>
</View>
`;

exports[`SocialButton Should render with custom props 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": true,
    }
  }
  accessible={true}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "transparent",
        "borderColor": "transparent",
        "borderRadius": 10,
        "borderStyle": "solid",
        "borderWidth": 1,
        "height": 50,
        "justifyContent": "center",
        "width": "auto",
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "width": "100%",
        },
      ]
    }
  >
    <ActivityIndicator
      color="#FFFFFF"
      size="small"
    />
  </View>
</View>
`;
